Fix minor CSS glitches
- Alingment of footer
- Alingment of search bar
- Mysterious horizontal scrollbar

[#165117368]

--- a/resources/styles/_reset.less
+++ b/resources/styles/_reset.less
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   position: relative;
+  overflow-x: hidden;
 }
 
 *,
